<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#000000">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/topDisplay"
        android:id="@+id/topDisplay"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#7c7c7c"
        android:gravity="right"
        android:textSize="35sp"
        android:cursorVisible="false"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/bottomDisplay"
        android:id="@+id/bottomDisplay"
        android:layout_below="@+id/topDisplay"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:gravity="right"
        android:textSize="35sp"
        android:cursorVisible="false"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/gridLayout"
        android:layout_alignParentRight="true">

        <Button

            android:layout_width="80dip"
            android:layout_height="85dip"
            android:text="@string/dot"
            android:id="@+id/dot"
            android:layout_row="4"
            android:layout_column="1"
            android:textSize="45sp"
            android:textColor="#7c7c7c"
            android:background="#000000"
            />

        <Button
            android:layout_width="80dip"
            android:layout_height="85dip"
            android:text="@string/zero"
            android:id="@+id/zero"
            android:layout_row="4"
            android:layout_column="2"
            android:textSize="35sp"
            android:background="#000000"
            android:textColor="#7c7c7c" />

        <Button
            android:layout_width="80dip"
            android:layout_height="85dip"
            android:text="@string/plus"
            android:id="@+id/plus"
            android:layout_row="4"
            android:layout_column="4"
            android:textSize="35sp"
            android:textColor="#7c7c7c"
            android:background="#000000"/>

        <Button
            android:layout_width="80dip"
            android:layout_height="85dip"
            android:text="@string/equals"
            android:id="@+id/equals"
            android:layout_row="4"
            android:layout_column="5"
            android:textSize="40sp"
            android:textColor="#7c7c7c"
            android:background="#000000"/>

        <Button
            android:layout_width="80dip"
            android:layout_height="85dip"
            android:text="@string/four"
            android:id="@+id/four"
            android:layout_row="2"
            android:layout_column="1"
            android:textSize="35sp"
            android:textColor="#7c7c7c"
            android:background="#000000"/>

        <Button
            android:layout_width="80dip"
            android:layout_height="85dip"
            android:text="@string/five"
            android:id="@+id/five"
            android:layout_row="2"
            android:layout_column="2"
            android:textSize="35sp"
            android:textColor="#7c7c7c"
            android:background="#000000"/>

        <Button
            android:layout_width="80dip"
            android:layout_height="85dip"
            android:text="@string/six"
            android:id="@+id/six"
            android:layout_row="2"
            android:layout_column="4"
            android:textSize="35sp"
            android:textColor="#7c7c7c"
            android:background="#000000"/>

        <Button
            android:layout_width="80dip"
            android:layout_height="85dip"
            android:text="@string/multiply"
            android:id="@+id/multiply"
            android:layout_row="2"
            android:layout_column="5"
            android:textSize="35sp"
            android:textColor="#7c7c7c"
            android:background="#000000"/>

        <Button
            android:layout_width="80dip"
            android:layout_height="85dip"
            android:text="@string/three"
            android:id="@+id/three"
            android:layout_row="3"
            android:layout_column="1"
            android:textSize="35sp"
            android:textColor="#7c7c7c"
            android:background="#000000"/>

        <Button
            android:layout_width="80dip"
            android:layout_height="85dip"
            android:text="@string/two"
            android:id="@+id/two"
            android:layout_row="3"
            android:layout_column="2"
            android:textSize="35sp"
            android:textColor="#7c7c7c"
            android:background="#000000"/>

        <Button
            android:layout_width="80dip"
            android:layout_height="85dip"
            android:text="@string/one"
            android:id="@+id/one"
            android:layout_row="3"
            android:layout_column="4"
            android:textSize="35sp"
            android:textColor="#7c7c7c"
            android:background="#000000"/>

        <Button
            android:layout_width="80dip"
            android:layout_height="85dip"
            android:text="@string/minus"
            android:id="@+id/minus"
            android:layout_row="3"
            android:layout_column="5"
            android:textSize="40sp"
            android:textColor="#7c7c7c"
            android:background="#000000"/>

        <Button
            android:layout_width="80dip"
            android:layout_height="85dip"
            android:text="@string/seven"
            android:id="@+id/seven"
            android:layout_row="1"
            android:layout_column="1"
            android:textSize="35sp"
            android:textColor="#7c7c7c"
            android:background="#000000"/>

        <Button
            android:layout_width="80dip"
            android:layout_height="85dip"
            android:text="@string/eight"
            android:id="@+id/eight"
            android:layout_row="1"
            android:layout_column="2"
            android:textSize="35sp"
            android:textColor="#7c7c7c"
            android:background="#000000"/>

        <Button
            android:layout_width="80dip"
            android:layout_height="85dip"
            android:text="@string/nine"
            android:id="@+id/nine"
            android:layout_row="1"
            android:layout_column="4"
            android:textSize="35sp"
            android:textColor="#7c7c7c"
            android:background="#000000"/>

        <Button
            android:layout_width="80dip"
            android:layout_height="85dip"
            android:text="@string/divide"
            android:id="@+id/divide"
            android:layout_row="1"
            android:layout_column="5"
            android:textSize="35sp"
            android:textColor="#7c7c7c"
            android:background="#000000"/>

    </GridLayout>

    <Button
        android:layout_width="150dip"
        android:layout_height="55dip"
        android:text="@string/clear"
        android:id="@+id/clear"
        android:layout_above="@+id/gridLayout"
        android:layout_alignEnd="@+id/gridLayout"
        android:textSize="25sp"
        android:textColor="#7c7c7c"
        android:background="#000000"
        android:layout_alignRight="@+id/gridLayout"
        android:onClick="clearOne" />

    <Button
        android:layout_width="150dip"
        android:layout_height="55dip"
        android:text="@string/clearall"
        android:id="@+id/allClear"
        android:textSize="25sp"
        android:textColor="#7c7c7c"
        android:background="#000000"
        android:layout_alignTop="@+id/clear"
        android:layout_alignStart="@+id/gridLayout"
        android:layout_alignLeft="@+id/gridLayout" />

</RelativeLayout>
